Fixed logo size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ body{
 }
 
 .brand-title img{
-    width: 25%;
+    width: 150px;
 }
 
 .navbar-links {
@@ -129,7 +129,7 @@ body{
 
 .toggle-button {
     position: absolute;
-    top: 2rem;
+    top: 2.2rem;
     right: 1rem;
     display: none;
     flex-direction: column;
